# dockerized_eth_code2

./: .gitignore  README.md
app/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-compose11.yml
app/sql/: init_database_bsc.sql  init_database_btc.sql  init_database_eth.sql  init_database_tron.sql
app/src/: config.rs  lib.rs  main.rs  router.rs  state.rs
app/src/db/: init.rs  init_bsc.rs  init_btc.rs  init_eth.rs  init_tron.rs  mod.rs  sync_state.rs
app/src/handlers/: blocks.rs  health.rs  mod.rs  status.rs
app/src/helper/: tron.rs
app/src/models/: blockstreams.rs  contract_call.rs  mod.rs  money_flow.rs  owner.rs  sync_state.rs  token_metadata.rs  token_transfer.rs  transaction.rs  wallet.rs
app/src/services/: bitcoin.rs  bsc.rs  ethereum.rs  ethereum_detail.rs  loader.rs  mod.rs  progress.rs  sync_logic.rs  token_metadata_worker.rs  tron.rs
app/src/tasks/: fetch_loop.rs  mod.rs
neo4j/src/: config.rs
node/BSC/: docker-compose(with-snapshot).yml  docker-compose.yml
node/BSC/config/: config.toml  genesis.json
node/Ethereum/: docker-compose.yml
node/Ethereum/jwt/: jwt.hex
